Exploring integration of django-modeltranslation.
A note to the Torchbox folks. To give changes here a look you will want to also see changes on master at https://github.com/p97-labs/wagtaildemo.

The primary hurdle seen in integrating Modeltranslation with Wagtail as I went about it was saving (drafts and publishing).

Some references I used:
https://django-modeltranslation.readthedocs.org/en/latest/
https://docs.djangoproject.com/en/dev/topics/i18n/translation/

--- a/wagtail/wagtailadmin/templates/wagtailadmin/skeleton.html
+++ b/wagtail/wagtailadmin/templates/wagtailadmin/skeleton.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% load compress %}
+{% load i18n %}
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"  lang="{{ LANGUAGE_CODE|default:"en-gb" }}"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"  lang="{{ LANGUAGE_CODE|default:"en-gb" }}"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"  lang="{{ LANGUAGE_CODE|default:"en-gb" }}"> <![endif]-->
@@ -25,6 +26,22 @@
     <![endif]-->
 
     <div class="wrapper">
+    
+        <form action="{% url 'set_language' %}" method="post">
+            {% csrf_token %}
+            <input name="next" type="hidden" value="{{ redirect_to }}" />
+            <select name="language">
+                {% get_language_info_list for LANGUAGES as languages %}
+                {% for language in languages %}
+                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
+                    {{ language.name_local }} ({{ language.code }})
+                </option>
+                {% endfor %}
+            </select>
+            <input type="submit" value="Go" />
+        </form>
+
+
        {% block furniture %}{% endblock %}
     </div>
 
